@@ -294,7 +294,7 @@ void send_cannot_edit(struct char_data *ch, zone_vnum zone)
     send_to_char(ch, "You do not have permission to edit zone %d.  Try zone %d.\r\n", zone, GET_OLC_ZONE(ch));
     sprintf(buf, "OLC: %s tried to edit zone %d (allowed zone %d).", GET_NAME(ch), zone, GET_OLC_ZONE(ch));
   } else {
-    send_to_char(ch, "You do not have permission to edit zone %d.\r\n", GET_OLC_ZONE(ch));
+    send_to_char(ch, "You do not have permission to edit zone %d.\r\n", zone);
     sprintf(buf, "OLC: %s tried to edit zone %d.", GET_NAME(ch), zone);
   }
   mudlog(BRF, LVL_IMPL, TRUE, buf);
