@@ -3,6 +3,10 @@ help, find any bugs, or have ideas for improvement please stop by TBA at
 telnet://tbamud.com:9091 or email rumble@tbamud.com --Rumble
  
 tbaMUD 3.56
+[Jun 14 2008] - Rumble
+  Made immortals immune to blinding.
+  Fixed bug in qedit where quest completion would try to load an object with vnum NOTHING. (thanks Jamdog)
+  Fixed log when builder tries to edit a zone without permission.
 [Jun 12 2008] - Rumble
   Fixed toggle quest to toggle correctly.
   Fixed bug in dg find_replacement to call text_processed at the beginning, regardless of whether something matching the variable is found or not. (thanks Laoris)
